<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".summary_activity">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:text="@string/summary"
        android:textColor="#c6c6c6"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/llama"
             />

        <TextView
            android:id="@+id/name1"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textStyle="normal"
            android:fontFamily="@font/quicksandsemibold"
            android:text="@string/congratulations_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:radius="10dp"
        android:text="@string/accuracy"
        android:textColor="#c6c6c6"
        android:textSize="17sp"
        android:textStyle="normal" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="0dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"
        app:cpb_background_progressbar_color="#eb0a42"
        app:cpb_background_progressbar_width="10dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progress_max="5"
        app:cpb_progressbar_color="#00c984"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        tools:progress="60" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-155dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="25dp"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_marginTop="110dp"
        android:paddingBottom="20dp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:text="@string/performance_stats"
        android:textColor="#c6c6c6"
        android:textSize="17sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/correctCount"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/layout_bg"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:radius="10dp"
        android:text="correct"
        android:textColor="#c6c6c6"
        android:textSize="20sp"
        android:textStyle="normal"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/wrongCount"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-85dp"
        android:background="@drawable/layout_bg"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:radius="10dp"
        android:text="@string/incorrect"
        android:textColor="#c6c6c6"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/unattemptedCount"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/layout_bg"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:radius="10dp"
        android:text="@string/unattempted"
        android:textColor="#c6c6c6"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/streakCount"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-85dp"
        android:background="@drawable/layout_bg"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:radius="10dp"
        android:text="@string/streak"
        android:textColor="#c6c6c6"
        android:textSize="20sp"
        android:textStyle="normal" />


    <Button
        android:id="@+id/play_again"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/quicksandsemibold"
        android:gravity="center"
        android:text="Play again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="HardcodedText">

    </Button>

    <Button
        android:id="@+id/new_quiz"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="-100dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/quicksandsemibold"
        android:text="Find a new quiz"
        android:textColor="#4a4a4a"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="HardcodedText" />




</LinearLayout>