<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login_activity"
    >

    <ImageView
        android:layout_width="226dp"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/quizlet" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/black1"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandbold"
                android:gravity="center"
                android:text="@string/log_in_to_quizizz"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/username"
                android:fontFamily="@font/quicksandbold"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/black"
                    android:windowSoftInputMode="adjustPan"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:fontFamily="@font/quicksandbold"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089"
                    android:inputType="textPassword"
                    android:windowSoftInputMode="adjustPan"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksandsemibold"
                android:backgroundTint="@color/purple"
                android:text="@string/log_in"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:windowSoftInputMode="adjustPan"
                >
            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/don_t_have_an_account"
                android:layout_marginTop="10dp"
                android:layout_marginStart="60dp"
                android:fontFamily="@font/quicksandsemibold"
                android:textColor="@color/gray1"
                android:textSize="15sp"
                android:padding="3dp"
                />

            <TextView
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="236dp"
                android:textColor="@color/purple"
                android:fontFamily="@font/quicksandsemibold"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:padding="2dp"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>