<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#391038"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="226dp"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/quizlet" />

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    >
    <!-- line-22 - adjust position to the right -->
    <!-- line-23 - adjust position to the left  -->
    <!-- line-24 - change background color -->
    <!-- line-25 - adjust radius corner -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandbold"
                android:gravity="center"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textColor="#363A43"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textColor="#7A8089"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089"
                    android:inputType="textVisiblePassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksandbold"
                android:text="Start"
                android:textSize="20sp"
                android:textAllCaps="false"
                >

            </Button>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>